# bobot-2

./: .gitignore  .gitmodules  README.md
Hardware/Moby/Logic_Board/: Logic_Board.kicad_prl  Logic_Board.kicad_sch
Hardware/Moby/Power/: Power.kicad_sch
Hardware/Moby/RF/: RF.kicad_pro
Hardware/Moby/Sensors/: Sensors.kicad_pro  Sensors.kicad_sch
Hardware/Tim/Cutdown Board Test/Cutdown_Test/: Cutdown_Test.kicad_pcb  Cutdown_Test.kicad_prl  Cutdown_Test.kicad_pro  Cutdown_Test.kicad_sch  fp-lib-table  sym-lib-table
Hardware/Tim/Logic_Board/: Logic_Board.kicad_sch
Hardware/Tim/Main board/: #auto_saved_files#  Main board-Edge_Cuts.dxf  Main board.kicad_pcb  Main board.kicad_prl  Main board.kicad_pro  Main board.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~Main board.kicad_sch.lck
Hardware/Tim/Main board/Bobot-2/: Main board-B_Cu.gbr  Main board-B_Mask.gbr  Main board-B_Paste.gbr  Main board-B_Silkscreen.gbr  Main board-Edge_Cuts.gbr  Main board-F_Cu.gbr  Main board-F_Mask.gbr  Main board-F_Paste.gbr  Main board-F_Silkscreen.gbr  Main board-In1_Cu.gbr  Main board-In2_Cu.gbr  Main board-NPTH-drl.gbr  Main board-PTH-drl.gbr  Main board-job.gbrjob
Hardware/Tim/Main board/Bobot-2 pcbway/: Main board-B_Cu.gbr  Main board-B_Mask.gbr  Main board-B_Paste.gbr  Main board-B_Silkscreen.gbr  Main board-Edge_Cuts.gbr  Main board-F_Cu.gbr  Main board-F_Mask.gbr  Main board-F_Paste.gbr  Main board-F_Silkscreen.gbr  Main board-In1_Cu.gbr  Main board-In2_Cu.gbr  Main board-NPTH-drl.gbr  Main board-PTH-drl.gbr  Main board-job.gbrjob
Hardware/Tim/Main board/Extra footprints/: LQFN28_Rev0_ADI-M.kicad_mod
Hardware/Tim/Main board/LTC4416EMS-PBF/KiCADv6/: 2024-02-04_21-26-55.kicad_sym
Hardware/Tim/Main board/bom/: ibom.html
Hardware/Tim/Power/: Power.kicad_sch
Hardware/Tim/Power & Motor/: Power & Motor.kicad_pcb  Power & Motor.kicad_prl  Power & Motor.kicad_pro  Power & Motor.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Hardware/Tim/RF/: RF.kicad_sch
Hardware/Tim/Redundant_System/: Redundant_System.kicad_prl  Redundant_System.kicad_pro  Redundant_System.kicad_sch
Hardware/Tim/Sensors/: Sensors.kicad_sch
Hardware/Tim/main_board2.0/Libraries/Adafruit-BNO055-Breakout-PCB-master/Adafruit-BNO055-Breakout-PCB-master/Adafruit BNO055/: Adafruit BNO055-eagle-import.kicad_sym  Adafruit BNO055.kicad_pcb  Adafruit BNO055.kicad_prl  Adafruit BNO055.kicad_pro  Adafruit BNO055.kicad_sch
Hardware/Tim/main_board2.0/Libraries/Adafruit-BNO055-Breakout-PCB-master/Adafruit-BNO055-Breakout-PCB-master/Adafruit BNO055/Adafruit BNO055.pretty/: 0805-NO.kicad_mod  0805_10MGAP.kicad_mod  1X04_ROUND_76.kicad_mod  1X06_ROUND_76.kicad_mod  ADAFRUIT_2.5MM.kicad_mod  ADAFRUIT_TEXT_20MM.kicad_mod  BNO055.kicad_mod  CRYSTAL_8X3.8.kicad_mod  FIDUCIAL_1MM.kicad_mod  MOUNTINGHOLE_2.5_PLATED_THICK.kicad_mod  PCBFEAT-REV-040.kicad_mod  SOD-323.kicad_mod  SOT23-5.kicad_mod  SOT23-WIDE.kicad_mod  _0805MP.kicad_mod
Hardware/Tim/main_board2.0/Libraries/Aesthetics/: Logo.kicad_mod  logosmall.kicad_mod
Hardware/Tim/main_board2.0/Libraries/BAT-HLD-001/: BAT-HLD-001.kicad_sym  BAT_BAT-HLD-001.kicad_mod
Hardware/Tim/main_board2.0/Libraries/BNO055/: BNO055.kicad_mod
Hardware/Tim/main_board2.0/Libraries/DEV-16771/: MODULE_DEV-16771.kicad_mod
Hardware/Tim/main_board2.0/relayboard/relayboard/: relayboard.kicad_prl  relayboard.kicad_pro
Hardware/Tim/main_board2.0/winderboard_2.0/: #auto_saved_files#  _autosave-winderboard_2.0.kicad_pcb  fp-info-cache  winderboard_2.0.kicad_pcb  winderboard_2.0.kicad_prl  winderboard_2.0.kicad_pro  winderboard_2.0.kicad_sch  winderboard_2.0.kicad_sch-bak
Moby/Hardware/Logic_Board/: Logic_Board.kicad_pro  Logic_Board.kicad_sch
Moby/Hardware/Power/: Power.kicad_pro
Moby/Hardware/RF/: RF.kicad_sch
Moby/Hardware/Sensors/: Sensors.kicad_pro  Sensors.kicad_sch
Software/: whoops shitty code.txt
Software/Tim/: README notes.txt  Tim_Calcs.py  hw_config.c
Software/Tim/Elect_test/: CMakeLists.txt  README.md  clean_build.sh  hw_config.c  main.c  main.cpp  main_functions.h
Software/Tim/Elect_test/src/: helpers.cpp  helpers.h  hw_config.c  main.cpp
Software/Tim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/include/: hw_config.h
Testing_code/: Testing_code.ino
Tim/: TimMatlabCalc.m  Tim_Calcs.py
Tim/Hardware/Power/: Power.kicad_sch
